# Libraswar

./: README.md  manage.py  pyproject.toml
LibraswarDjango/: asgi.py  settings.py  urls.py  wsgi.py
eventsApp/: models.py  views.py
eventsApp/migrations/: 0001_initial.py
eventsApp/static/js/: htmx.min.js
eventsApp/templates/: _base.html  index.html
