[tool.poetry]
name = "libraswar"
version = "0.1.0"
description = "Un agregateur sémentique d'évènements"
authors = ["Jonas Legion <jturbeaux@pm.me>"]
license = "AGPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
django-htmx = "^1.14.0"
scrapingbee = "^1.2.0"
ipython = "^8.12.0"
faker = "^18.4.0"
uuid = "^1.30"
django-extensions = "^3.2.1"
werkzeug = "^2.2.3"
django-browser-reload = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
